# Gym-Tracking-App

./: .gitignore  planning.txt
Backend/: .env.example  .gitignore  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
Backend/alembic/: env.py  script.py.mako
Backend/alembic/versions/: 5e60ea394aeb_initial_schema.py  f494f3660093_initial_schema.py
Backend/app/: app.py  config.py  dependencies.py
Backend/app/auth/: __init__.py  cache.py  jwt.py  user.py
Backend/app/db/: __init__.py  session.py  unit_of_work.py  utils.py
Backend/app/errors/: __init__.py  base_error_app.py  domain_errors.py
Backend/app/exceptions/: __init__.py  base_exception_app.py  domain_exceptions.py
Backend/app/models/: __init__.py  base.py  exercises.py  routines.py  routines_exercises.py  users.py  workouts.py  workouts_exercises.py  workouts_sets.py
Backend/app/policies/: __init__.py  exercises.py  routines.py  routines_exercises.py  workouts.py  workouts_exercises.py  workouts_sets.py
Backend/app/repositories/: __init__.py  base.py  base_repo.py  exercises.py  ordered_exercises_base.py  routines.py  routines_exercises.py  workouts.py  workouts_exercises.py  workouts_sets.py
Backend/app/routes/: __init__.py  exercises.py  routines.py  routines_exercises.py  workouts.py  workouts_exercises.py  workouts_sets.py
Backend/app/schemas/: __init__.py  exercises.py  routines.py  routines_exercises.py  shared.py  types.py  workouts.py  workouts_exercises.py  workouts_sets.py
Backend/app/services/: __init__.py  exercises.py  routines.py  (+1 more)
Backend/migrations/: env.py
(+27 files in other folders)
