[project]
name = "gym-tracking-app"
version = "0.1.0"
description = ""
dependencies = [
    "alembic",
    "asyncpg",
    "fastapi",
    "httpx",
    "psycopg2-binary",
    "pydantic",
    "pydantic-settings",
    "python-jose",
    "sqlalchemy[asyncio]",
    "uvicorn[standard]"
]
requires-python = ">=3.13"

[project.optional-dependencies]
dev = ["ruff", "pip-tools"]


[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py313"

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # isort
    "I",
]
ignore = [
    "E501",  # line too long
    "B008",  # Depends() in FastAPI signatures — false positive
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"